<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.upg</groupId>
  <artifactId>qm-pc-init</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>war</packaging>
  
  <properties>
	<springframe-version>4.1.6.RELEASE</springframe-version>
	<slf4j-version>1.7.6</slf4j-version>
	<jackson-version>2.5.3</jackson-version>
	<commons-beanutils-version>1.8.3</commons-beanutils-version>
  </properties>
  
  <dependencies>
  <!--以下是spring框架组件 -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${springframe-version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>${springframe-version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${springframe-version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId>
			<version>${springframe-version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-expression</artifactId>
			<version>${springframe-version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aop</artifactId>
			<version>${springframe-version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
			<version>${springframe-version}</version>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjweaver</artifactId>
			<version>1.8.1</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>${springframe-version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${springframe-version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${springframe-version}</version>
		</dependency>
		<dependency>
			<groupId>org.mybatis</groupId>
			<artifactId>mybatis-spring</artifactId>
			<version>1.2.2</version>
		</dependency>
		<dependency>
			<groupId>org.mybatis</groupId>
			<artifactId>mybatis</artifactId>
			<version>3.2.8</version>
		</dependency>
		
		<dependency>
  			<groupId>mysql</groupId>
  			<artifactId>mysql-connector-java</artifactId>
  			<version>5.1.9</version>
		</dependency>
		
		<dependency>
			 <groupId>com.mchange</groupId>
			 <artifactId>c3p0</artifactId>
			 <version>0.9.5-pre8</version>
		</dependency>
		<!-- jackson处理包 -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>${jackson-version}</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson-version}</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>${jackson-version}</version>
		</dependency>
		<!-- apache commons工具类库 -->
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>${commons-beanutils-version}</version>
		</dependency>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils-core</artifactId>
			<version>${commons-beanutils-version}</version>
		</dependency>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils-bean-collections</artifactId>
			<version>${commons-beanutils-version}</version>
		</dependency>
		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>3.2.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.3.2</version>
		</dependency>
		<dependency>
		  <groupId>commons-io</groupId>
		  <artifactId>commons-io</artifactId>
		  <version>2.4</version>
		</dependency>
		<!--JAVA字节码 -->
		<dependency>
			<groupId>javassist</groupId>
			<artifactId>javassist</artifactId>
			<version>3.12.0.GA</version>
		</dependency>
		<!--以下为测试相关依赖 -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<!-- <scope>test</scope> -->
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.9.5</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${springframe-version}</version>
		</dependency>
		<!-- servlet包 -->
		<dependency>
			<groupId>org.apache.geronimo.specs</groupId>
			<artifactId>geronimo-servlet_3.0_spec</artifactId>
			<version>1.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.geronimo.specs</groupId>
			<artifactId>geronimo-jsp_2.2_spec</artifactId>
			<version>1.2</version>
			<scope>provided</scope>
		</dependency>
		<!--以下是日志组件所需jar包 -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j-version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${slf4j-version}</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>com.upg</groupId>
			<artifactId>comm-jd</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
		  <groupId>commons-codec</groupId>
		  <artifactId>commons-codec</artifactId>
		  <version>1.5</version>
		</dependency>
		<dependency>
		  <groupId>commons-httpclient</groupId>
		  <artifactId>commons-httpclient</artifactId>
		  <version>3.1</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.httpcomponents</groupId>
		    <artifactId>httpclient</artifactId>
		    <version>4.4.1</version>
		</dependency>
		<dependency>
		  <groupId>org.jsoup</groupId>
		  <artifactId>jsoup</artifactId>
		  <version>1.7.2</version>
		</dependency>
		<!-- quartz调度包 -->
		<dependency>
			<groupId>org.quartz-scheduler</groupId>
			<artifactId>quartz</artifactId>
			<version>2.2.1</version>
			<exclusions>
				<exclusion>
					<artifactId>c3p0</artifactId>
					<groupId>c3p0</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
		    <groupId>net.sf.json-lib</groupId>
		    <artifactId>json-lib</artifactId>
		    <version>2.2.3</version>
		    <classifier>jdk15</classifier>
		</dependency>
		<dependency>
		    <groupId>dom4j</groupId>
		    <artifactId>dom4j</artifactId>
		    <version>1.6.1</version>
		</dependency>
		<dependency>
		    <groupId>com.thoughtworks.xstream</groupId>
		    <artifactId>xstream</artifactId>
		    <version>1.4.8</version>
		</dependency>
		<dependency>
		    <groupId>cglib</groupId>
		    <artifactId>cglib</artifactId>
		    <version>3.1</version>
		</dependency>
		<!--以下为测试相关依赖 -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.9.5</version>
		</dependency>
		<!-- servlet包 -->
		<dependency>
			<groupId>org.apache.geronimo.specs</groupId>
			<artifactId>geronimo-servlet_3.0_spec</artifactId>
			<version>1.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.geronimo.specs</groupId>
			<artifactId>geronimo-jsp_2.2_spec</artifactId>
			<version>1.2</version>
			<scope>provided</scope>
		</dependency>
		
<!--引用微信jar,一般注释-->
        <dependency>
		    <groupId>com.google.guava</groupId>
		    <artifactId>guava</artifactId>
		    <version>18.0</version>
		</dependency>
	</dependencies>

	<build>
		<finalName>qm-pc-init</finalName>
		<plugins>
			<plugin>
	      	  <groupId>org.mybatis.generator</groupId>
	      	  <artifactId>mybatis-generator-maven-plugin</artifactId>
	          <version>1.3.2</version>
	          <configuration>
	          	<overwrite>true</overwrite>
	          </configuration>
	        </plugin>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.1</version>
				<configuration>
					<attach>true</attach>
				</configuration>
				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
					<encoding>utf8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.tomcat.maven</groupId>
				<artifactId>tomcat7-maven-plugin</artifactId>
				<version>2.2</version>
				<configuration>
					<port>80</port>
					<path>/</path>
					<systemProperties>
						<JAVA_OPTS>-Xms256m -Xmx512m -XX:MaxPermSize=256m</JAVA_OPTS>
						<MAVEN_OPTS>-Xdebug
							-Xrunjdwp:transport=dt_socket,address=1044,server=y,suspend=n</MAVEN_OPTS>
					</systemProperties>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<webResources>
						<resource>
							<filtering>true</filtering>
							<!-- this is relative to the pom.xml directory -->
			              	<directory>src/main/webapp</directory>
			              	<includes>
			              		<include>**/config/*.properties</include>
			              	</includes>
			            </resource>
		         	</webResources>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<id>dev</id>
			<properties>
				<!-- 数据库配置 -->
				<maven.db.driverClassName>com.mysql.jdbc.Driver</maven.db.driverClassName>
				<maven.db.url><![CDATA[jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull]]></maven.db.url>
				<maven.db.username>root</maven.db.username>
				<maven.db.password>qm123456</maven.db.password>
				<!-- log配置 -->
				<maven.log4j.rootCategory.level>INFO</maven.log4j.rootCategory.level>
				<maven.log4j.logger.com.upg.zx>DEBUG</maven.log4j.logger.com.upg.zx>
				<maven.log4j.logger.org.apache.ibatis>DEBUG</maven.log4j.logger.org.apache.ibatis>
				<maven.log4j.logger.org.mybatis>DEBUG</maven.log4j.logger.org.mybatis>
				<!-- 调度任务配置 -->
				<maven.ScheduleAddCompanyDetailRepeatInterval>1800000</maven.ScheduleAddCompanyDetailRepeatInterval>
				<maven.ScheduleUpdateCompanyDetailCronExpression>0 0 0 1 * ?</maven.ScheduleUpdateCompanyDetailCronExpression>
			</properties>
		</profile>
		<profile>
			<id>test</id>
			<properties>
				<!-- 数据库配置 -->
				<maven.db.driverClassName>com.mysql.jdbc.Driver</maven.db.driverClassName>
				<maven.db.url><![CDATA[jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull]]></maven.db.url>
				<maven.db.username>root</maven.db.username>
				<maven.db.password>qm123456</maven.db.password>
				<!-- log配置 -->
				<maven.log4j.rootCategory.level>INFO</maven.log4j.rootCategory.level>
				<maven.log4j.logger.com.upg.zx>DEBUG</maven.log4j.logger.com.upg.zx>
				<maven.log4j.logger.org.apache.ibatis>DEBUG</maven.log4j.logger.org.apache.ibatis>
				<maven.log4j.logger.org.mybatis>DEBUG</maven.log4j.logger.org.mybatis>
				<!-- 调度任务配置 -->
				<maven.ScheduleAddCompanyDetailRepeatInterval>1800000</maven.ScheduleAddCompanyDetailRepeatInterval>
				<maven.ScheduleUpdateCompanyDetailCronExpression>0 0 0 1 * ?</maven.ScheduleUpdateCompanyDetailCronExpression>
			</properties>
		</profile>
		<profile>
			<id>product</id>
			<properties>
				<!-- 数据库配置 -->
				<maven.db.driverClassName>com.mysql.jdbc.Driver</maven.db.driverClassName>
				<maven.db.url><![CDATA[jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull]]></maven.db.url>
				<maven.db.username>root</maven.db.username>
				<maven.db.password>qm123456</maven.db.password>
				<!-- log配置 -->
				<maven.log4j.rootCategory.level>INFO</maven.log4j.rootCategory.level>
				<maven.log4j.logger.com.upg.zx>INFO</maven.log4j.logger.com.upg.zx>
				<maven.log4j.logger.org.apache.ibatis>INFO</maven.log4j.logger.org.apache.ibatis>
				<maven.log4j.logger.org.mybatis>INFO</maven.log4j.logger.org.mybatis>
				<!-- 调度任务配置 -->
				<maven.ScheduleAddCompanyDetailRepeatInterval>1800000</maven.ScheduleAddCompanyDetailRepeatInterval>
				<maven.ScheduleUpdateCompanyDetailCronExpression>0 0 11-12,1-5 * * ?</maven.ScheduleUpdateCompanyDetailCronExpression>
			</properties>
		</profile>
	</profiles>
</project>